<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical">

    <include layout="@layout/title_act_layout" />

    <LinearLayout
        style="@style/input_corners"
        android:orientation="vertical">

        <com.beyonditsm.financial.widget.ClearEditText
            android:id="@+id/comfirmPwd1"
            style="@style/update_et"
            android:inputType="textPassword"
            android:hint="@string/new_password" />

        <View style="@style/zc_line" />

        <com.beyonditsm.financial.widget.ClearEditText
            android:id="@+id/comfirmPwd2"
            style="@style/update_et"
            android:hint="@string/confirm_new_password"
            android:inputType="textPassword"/>
    </LinearLayout>

    <TextView
        android:id="@+id/comfirmtv"
        style="@style/zc_btn"
        android:text="@string/confirm" />

</LinearLayout>
